force-app/main/default/objects/Hotel_Master__c/Hotel_Master__c.object-meta.xml
<CustomObject>
    <label>Hotel Master</label>
    <nameField>
        <displayFormat>H-{000}</displayFormat>
        <label>Hotel Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hotel Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>