force-app/main/default/objects/Hotel_Master__c/fields/Cancellation_Availability__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancellation Availability</label>
    <type>Checkbox</type>
</CustomField>