force-app/main/default/objects/Hotel_Master__c/fields/Cash_Pay_Availability__c.field-meta.xml
<CustomField>
    <fullName>Cash_Pay_Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cash Pay Availability</label>
    <type>Checkbox</type>
</CustomField>