force-app/main/default/objects/Hotel_Master__c/fields/Hotel_Name__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Name__c</fullName>
    <label>Hotel Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>