force-app/main/default/objects/Hotel_Master__c/fields/Hotel_Type__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Type__c</fullName>
    <label>Hotel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 Star</fullName>
            </value>
            <value>
                <fullName>4 Star</fullName>
            </value>
            <value>
                <fullName>5 Star</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>