force-app/main/default/objects/Hotel_Master__c/fields/Per_Day_Cost__c.field-meta.xml
<CustomField>
    <fullName>Per_Day_Cost__c</fullName>
    <label>Per Day Cost</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>