force-app/main/default/objects/Hotel_Master__c/fields/WiFi_Availability__c.field-meta.xml
<CustomField>
    <fullName>WiFi_Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WiFi Availability</label>
    <type>Checkbox</type>
</CustomField>