force-app/main/default/objects/Hotel_Master__c/listViews/Hotel.listView-meta.xml
<ListView>
    <fullName>Hotel</fullName>
    <columns>NAME</columns>
    <columns>Cancellation_Availability__c</columns>
    <columns>Cash_Pay_Availability__c</columns>
    <columns>Hotel_City__c</columns>
    <columns>Hotel_Name__c</columns>
    <columns>Hotel_Type__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Per_Day_Cost__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>WiFi_Availability__c</columns>
    <filterScope>Mine</filterScope>
    <label>Hotel</label>
</ListView>